--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "eslint": "^4.6.0",
     "eslint-plugin-react": "^7.0.0",
     "jest": "^21.0.0",
-    "react": "16.0.0-beta.5",
-    "react-native": "0.49.3",
-    "react-test-renderer": "16.0.0-beta.5"
+    "react": "16.0.0",
+    "react-native": "0.50.3",
+    "react-test-renderer": "16.0.0"
   },
 
   "scripts": {
