Replaced npmignore with file whitelist

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
 
   "main": "index.js",
+  "files": ["index.js", "src/*", "license.txt", "readme.md"],
 
   "repository": {
     "type": "git",
