--- a/package.json
+++ b/package.json
@@ -38,16 +38,18 @@
   },
 
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "babel-eslint": "^10.0.0",
-    "babel-jest": "^22.0.0",
-    "babel-preset-react-native": "4.0.0",
+    "babel-jest": "^24.9.0",
     "eslint": "^6.5.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-native": "^3.7.0",
-    "jest": "^22.0.0",
-    "react": "16.2.0",
-    "react-native": "0.52.0",
-    "react-test-renderer": "16.2.0"
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react": "16.10.2",
+    "react-native": "0.61.2",
+    "react-test-renderer": "16.10.2"
   },
 
   "scripts": {
