--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
 
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": ">=16.3.0",
+    "react-native": ">=0.55.0"
   },
 
   "devDependencies": {
